--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
 
 
     <div class="container-fluid fh5co-recent-news mt-5 pb-5">
-        <h2 class="text-uppercase text-center" style="color: aliceblue;">Nos References</h2>
+        <h2 class="text-uppercase text-center" style="color: #e75151;">Nos References</h2>
         <hr class="mx-auto" />
 
         <div class="play-list mt-5 pt-4">
@@ -424,7 +424,7 @@
         </div>
     </div>
 
-    <div class="container-fluid jumbotron-fluid stay mt-5 pt-5 pb-5">
+    <div class="container-fluid jumbotron-fluid stay mt-5 pt-5 pb-5" style="background-color: #F5F5DC;">
         <h2 class="text-center">Stay Updated</h2>
         <p class="text-center mt-2">Sign up for our newsletter to receive the latest news and event postings.</p>
         <div class="input-group mt-4 mx-auto" style="max-width: 640px">
