--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="#formation">Formation</a>
                 </div>
                 <div class="circle accompagnement">
-                    <a href="#accompagnement">Accompagnement</a>
+                    <a href="#accompagnement">Assistance et Accompagnement</a>
                 </div>
             </div>
             <nav class="nav nav-fill mx-auto">
