--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
             <div class="circles-container">
                 <div class="circle formation">
-                    <a href="#formation">Formation</a>
+                    <a href="#formation">Formations</a>
                 </div>
                 <div class="circle accompagnement">
                     <a href="#accompagnement">Assistance et Accompagnement</a>
