--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 
     <title>MBA Amri Consult</title>
 
-
+    
 </head>
 
 <body>
     <header class="mt-0 pt-0">
         <div class="bg-cover clearfix pt-3">
-            <h2 class="logo">MBA Amri Consult</h2>
+            <!-- <h2 class="logo">MBA Amri Consult</h2> -->
             <img style="margin: 6%;" src="./assets/images/logo_MBA_-_AMRI-removebg-preview.png" alt="">
 
             <div class="circles-container">
                 <div class="circle formation">
-                    <a href="#formation">Formations</a>
+                    <a   target="_blank" href="./assets/formation.html"><h6>Formation</h6></a>
                 </div>
                 <div class="circle accompagnement">
-                    <a href="#accompagnement">Assistance et Accompagnement</a>
+                    <a  target="_blank" href="./assets/accompagnement.html"><h6>Assistance et Accompagnement</h6></a>
                 </div>
             </div>
             <nav class="nav nav-fill mx-auto">
