--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
 
             <div class="circles-container">
                 <div class="circle formation">
-                    <a   target="_blank" href="./assets/formation.html"><h6>Formation</h6></a>
+                    <a   href="./assets/formation.html"><h6>Formation</h6></a>
                 </div>
                 <div class="circle accompagnement">
-                    <a  target="_blank" href="./assets/accompagnement.html"><h6>Assistance et Accompagnement</h6></a>
+                    <a  href="./assets/accompagnement.html"><h6>Assistance et Accompagnement</h6></a>
                 </div>
             </div>
             <nav class="nav nav-fill mx-auto">
@@ -67,10 +67,10 @@
                                 <a class="nav-link" href="index.html">Acceuil</a>
                             </li>
                             <li class="nav-item">
-                                <a target="_blank" class="nav-link" href="./assets/article.html">À propos</a>
+                                <a  class="nav-link" href="./assets/article.html">À propos</a>
                             </li>
                             <li class="nav-item">
-                                <a target="_blank" class="nav-link" href="./assets/contact.html">Nous contacter</a>
+                                <a  class="nav-link" href="./assets/contact.html">Nous contacter</a>
                             </li>
 
                             <li class="nav-item">
@@ -274,7 +274,7 @@
 
 
     <div class="container-fluid fh5co-recent-news mt-5 pb-5">
-        <h2 class="text-uppercase text-center" style="color: #e75151;">Nos References</h2>
+        <h2 class="text-uppercase text-center" style="color: #067800;">Nos References</h2>
         <hr class="mx-auto" />
 
         <div class="play-list mt-5 pt-4">
