--- a/assets/article.html
+++ b/assets/article.html
@@ -17,8 +17,8 @@
     <div class="container">
         <header>
             <img style="margin: 6%;" src="./assets/images/logo_MBA_-_AMRI-removebg-preview.png" alt="">
-            <h1>Qui Sommes Nous </h1>
-            <p>Découvrez notre collection de fichiers multimédias.</p>
+            <h1>Qui Sommes Nous ?</h1>
+            <p>Découvrez notre collection de fichiers multimédias</p>
         </header>
         
         <main>
