--- a/index.html
+++ b/index.html
@@ -13,52 +13,7 @@
     <link rel="icon" href="./assets/images/logo_MBA_-_AMRI-removebg-preview.png">
 
     <title>MBA Amri Consult</title>
-    <style>
-        .ab {
-            display: flex;
-            justify-content: space-around;
-            width: 90%;
-            max-width: 100%;
-            margin: auto;
-        }
-
-        .ac {
-            background-color: #fff;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            padding: 20px;
-            margin: 10px;
-            flex: 1;
-            max-width: 50%;
-            text-align: center;
-            transition: transform 0.3s ease;
-        }
-
-        .ac:hover {
-            color: #022a00;
-            transform: translateY(-50px);
-        }
-
-        .ad {
-            margin-bottom: 34%;
-        }
-
-        .ae {
-            background-color: #2d383e21;
-            color: #fff;
-        }
-
-        .af {
-            background-color: #ffe4b5;
-            color: #555;
-        }
-        
-        h3 {
-            margin-top: 50%;
-            font-size: 4.5em;
-            margin-bottom: 55%;
-        } 
-    </style>
+    
 
 </head>
 
@@ -275,11 +230,11 @@
                 <div class="col-md-8 mb-4">
                     <div class="row">
                         <div class="col-md-12 col-lg-7 pr-0 pd-md">
-                            <img src="./assets/images/cartevisite.png" alt="">
+                            <!-- <img src="./assets/images/cartevisite.png" alt=""> -->
                         </div>
                         <div class="col-md-12 col-lg-5 light-bg cus-pd cus-arrow-left">
-                            <p><small>MBA Amri Consult</small></p>
-                            <h3>Nous contacter </h3>
+                            <!-- <p><small>MBA Amri Consult</small></p> -->
+                            <!-- <h3>Nous contacter </h3> -->
 
                         </div>
                     </div>
@@ -329,12 +284,12 @@
                     </div>
                 </div>
 
-                <div class="col-md-4 pl-4 mb-4">
+                <!-- <div class="col-md-4 pl-4 mb-4">
                     <div class="card">
                         <img class="card-img h-100" src="./assets/images/ii.jpg" alt="">
 
                     </div>
-                </div>
+                </div> -->
 
                 <!-- <div class="col-md-12 text-center">
                     <a href="#" class="btn">LOAD MORE</a>
