--- a/assets/formation.html
+++ b/assets/formation.html
@@ -67,7 +67,7 @@
             </div>
             
             <div class="card">
-                <img src="/assets/images/Image2.jpg" alt="Image 3">
+                <img src="https://idaraty.s3.us-west-000.backblazeb2.com/posts/gabes-le-label-marhba-en-atelier.jpg" alt="Image 3">
                 <div class="content">
                     <p>Formation sur Label « MARHBA » pour la qualité d’accueil</p>
                     <button>Read More</button>
