--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <div class="ad">
                      
                     </div>
-                    <a href="/assets/accompagnement.html"><h3  style="color: #555;">Assistance <br> & <br>Accompagnement</h3></a>
+                    <a href="./assets/accompagnement.html"><h3  style="color: #555;">Assistance <br> & <br>Accompagnement</h3></a>
                 </div>
             </div> 
 
