--- a/assets/contact.html
+++ b/assets/contact.html
@@ -3,41 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - MBA Amri Consult</title>
-    <link rel="stylesheet" href="./css/styles2.css">
-    <!-- Font Awesome pour les icônes -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <!-- Google Fonts pour les polices -->
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Merriweather:wght@700&display=swap" rel="stylesheet">
+    <title>Contactez-nous</title>
     <link rel="icon" href="./images/logo_MBA_-_AMRI-removebg-preview.png">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles2.css">
 </head>
 <body>
-    <div class="contact-container">
-        <header>
-            <h1>MBA</h1>
-            <h2>AMRI CONSULT</h2>
-        </header>
-        <section class="contact-info">
-            <h3>CONTACTEZ-NOUS</h3>
-            <div class="contact-details">
-                <div class="contact-item">
-                    <i class="fas fa-phone-alt"></i>
-                    <a href="tel:+21653589224">+216 53 589 224</a>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-envelope"></i>
-                    <a href="mailto:tunisiamba@gmail.com">TUNISIAMBA@GMAIL.COM</a>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-globe"></i>
-                    <a href="http://www.mbaconsult.com.tn" target="_blank">WWW.MBACONSULT.COM.TN</a>
-                </div>
-                <div class="contact-item">
-                    <i class="fas fa-map-marker-alt"></i>
-                    <p>AVENUE TAIEB MHIRI, ARIANA CENTRE C315</p>
-                </div>
+    <div class="container">
+        <div class="left">
+            <h2>Localisation </h2>
+            <div id="map">
+                <!-- Vous pouvez intégrer une carte Google Maps ici -->
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.0193046923335!2d-122.084249685317!3d37.42206597982466!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb5a6d4a5c33b%3A0x5a4d528ecbbd6c2a!2sGoogleplex!5e0!3m2!1sen!2sus!4v1601234567890!5m2!1sen!2sus" width="100%" height="100%" frameborder="0" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
-        </section>
+            <a href="https://www.google.ca/maps/search/AVENUE+TAIEB+MHIRI,+ARIANA+CENTRE+C315/@36.8599131,10.1954031,12z/data=!3m1!4b1?entry=ttu"><h2>Avenue Taieb Mhiri, Ariana Centre C315</h2></a>
+        </div>
+        <div class="right">
+            <h1>Contactez-nous</h1>
+            <h2><strong>Téléphone :</strong> +216 53 589 224</h2>
+            <h2><strong>Email :</strong> <a href="mailto:tunisiamba@gmail.com">tunisiamba@gmail.com</a></h2>
+            <h2><strong>Site Web :</strong> <a href="http://www.mbaconsult.com.tn">www.mbaconsult.com.tn</a></h2>
+        </div>
     </div>
+
+    <a href="../index.html" class="btn-retour" title="Retour">
+        &#8592; 
+    </a>
 </body>
 </html>
