--- a/assets/accompagnement.html
+++ b/assets/accompagnement.html
@@ -4,10 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Liste d’assistance et accompagnement MBA Amri Consult</title>
+    <title>Assistance et accompagnement MBA Amri Consult</title>
     <link rel="icon" href="./images/logo_MBA_-_AMRI-removebg-preview.png">
     <link rel="stylesheet" href="./css/style3.css">
-
+    <link rel="stylesheet" href="./css/style.css">
+<style>
+    footer h2.logo {
+        margin-left: 20%;
+        font-size: 125px;
+        font-family: "revenue";
+        color: #f5f5dc;
+        margin-bottom: 20px;
+    }
+</style>
 </head>
 
 <body>
@@ -125,55 +134,62 @@
                 </div>
             </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </div>
-
-
-
-
-
-
-
     </main>
-    <header>
-        <h1 style="color: #555;">Etude et Diagnostic <br> de Mise à Niveau</h1>
+  
+ 
+    <a href="../index.html" class="btn-retour" title="Retour">
+        &#8592; 
+    </a>
 
-    </header>
-    <div class="contact-section">
-        <h2>Contactez-nous</h2>
-        <div class="contact-info">
-            <p>
-                <i class="fas fa-phone-alt"></i>
-                <a href="tel:+33123456789">
-                    +216 53 589 224</a>
-            </p>
-            <p>
-                <i class="fab fa-facebook"></i>
-                <a href="https://www.facebook.com/tunisiamba/about/" target="_blank">Suivez-nous sur Facebook</a>
-            </p>
-            <p>
-                <i class="fas fa-map-marker-alt"><a
-                        href="https://www.google.ca/maps/search/AVENUE+TAIEB+MHIRI,+ARIANA+CENTRE+C315/@36.8599349,10.1428726,14z/data=!3m1!4b1?entry=ttu">AVENUE
-                        TAIEB MHIRI, ARIANA CENTRE C315</a></i>
+    <footer class="container-fluid pt-5">
 
+
+        <div class="contact-section">
+            <h2>Contactez-nous</h2>
+            <div class="contact-info">
+                <p>
+                    <i class="fas fa-phone-alt"></i>
+                    <a href="tel:+33123456789">
+                        +216 53 589 224</a>
+                </p>
+                <p>
+                    <i class="fab fa-facebook"></i>
+                    <a href="https://www.facebook.com/tunisiamba/about/" target="_blank">Suivez-nous sur
+                        Facebook</a>
+                </p>
+                <p>
+                    <i class="fas fa-map-marker-alt"><a
+                            href="https://www.google.ca/maps/search/AVENUE+TAIEB+MHIRI,+ARIANA+CENTRE+C315/@36.8599349,10.1428726,14z/data=!3m1!4b1?entry=ttu">AVENUE
+                            TAIEB MHIRI, ARIANA CENTRE C315</a></i>
+
+                </p>
+            </div>
+        </div>
+
+        <div class="container">
+            <h2 class="logo text-center">MBA Amri Consult</h2>
+            <nav class="nav nav-fill mx-auto mt-5">
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.facebook.com/profile.php?id=61559038396375"
+                        target="_blank"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="https://www.facebook.com/profile.php?id=61559038396375"
+                        target="_blank"><i class="fab fa-twitter"></i></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#"><i class="#"></i></a>
+                </li>
+
+            </nav>
+        </div>
+        <div class="copyright mt-4">
+            <p class="text-center">&copy; 2024 <a href="#" class="text-white">MBA Amri Consult</a>
+                <a href="https://freehtml5.co/shahala" target="_blank" class="text-white"></a>.
             </p>
         </div>
-    </div>
-
+    </footer>
 </body>
 
 </html>
