--- a/assets/contact.html
+++ b/assets/contact.html
@@ -19,7 +19,7 @@
             <a href="https://www.google.ca/maps/search/AVENUE+TAIEB+MHIRI,+ARIANA+CENTRE+C315/@36.8599131,10.1954031,12z/data=!3m1!4b1?entry=ttu"><h2>Avenue Taieb Mhiri, Ariana Centre C315</h2></a>
         </div>
         <div class="right">
-            <h1>Contactez-nous</h1>
+            <h1>Contactez_nous</h1>
             <h2><strong>Téléphone :</strong> +216 53 589 224</h2>
             <h2><strong>Email :</strong> <a href="mailto:tunisiamba@gmail.com">tunisiamba@gmail.com</a></h2>
             <h2><strong>Site Web :</strong> <a href="http://www.mbaconsult.com.tn">www.mbaconsult.com.tn</a></h2>
